--- a/css/parts/layout.css
+++ b/css/parts/layout.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 body{
     display: flex;
     min-height: 100vh;
@@ -13,4 +17,8 @@ main{
 
 .carousel-inner{
     max-height: 333px;
+}
+
+h2{
+    font-weight: 555;
 }
